# codimension

./: .gitignore  .markdownlint.json  .markdownlintignore  CONTRIBUTING.md  ChangeLog  FORK.md  NOTES.md  README.md  ROADMAP.md  TODO_FIXME.md  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
cdmplugins/: __init__.py  lintdriverbase.py  pyrightconfig.json
cdmplugins/bandit/: __init__.py  bandit.cdmp  banditconfig.py  banditdriver.py  banditresultviewer.py
cdmplugins/coverage/: __init__.py  coverage.cdmp  coveragedriver.py  coverageresultviewer.py
cdmplugins/git/: __init__.py  git.cdmp  gitconfig.py  gitdialogs.py  gitdriver.py  githubapi.py  gitstatusparser.py
cdmplugins/mypy/: __init__.py  mypy.cdmp  mypyconfig.py  mypydriver.py  mypyresultviewer.py
cdmplugins/pipaudit/: __init__.py  pipaudit.cdmp  pipauditdriver.py  pipauditresultviewer.py
cdmplugins/pytest/: __init__.py  pytest.cdmp  pytestdriver.py  pytestresultviewer.py
cdmplugins/ruff/: __init__.py  ruff.cdmp  ruffconfig.py  ruffdriver.py  ruffresultviewer.py
cdmplugins/ruffformat/: __init__.py  ruffformat.cdmp  ruffformatconfig.py  ruffformatdriver.py
cdmplugins/todopanel/: __init__.py  todopanel.cdmp  todopaneldriver.py  todopanelviewer.py  todoscanner.py
codimension/: codimension.py  imp_compat.py  pkg_resources_compat.py
codimension/analysis/: disasm.py  ierrors.py  notused.py
codimension/autocomplete/: bufferutils.py  completelists.py
codimension/debugger/: bpointviewer.py  bputils.py  bpwp.py  breakpoint.py  breakpointmodel.py  calltraceviewer.py  clientexcptviewer.py  context.py  editbreakpoint.py  excpt.py  ignoredexcptviewer.py  modifiedunsaved.py  server.py  stackviewer.py  (+9 more)
doc/: INSTALL.md  LICENSE_COMPLIANCE.md  github-integration-plan.md  index.md
resources/: codimension.appdata.xml
scripts/: check.sh
tests/: __init__.py  conftest.py  test_gitstatusparser.py  test_plugin_imports.py  test_todoscanner.py
(+213 files in other folders)
