[project]
name = "codimension"
version = "0.0.1"
description = "Experimental Python 3 IDE"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = ["doc/", "*.egg-info/", ".mypy_cache/"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []

[tool.ruff.lint.per-file-ignores]
# Demo/test file for flow UI - contains intentional patterns
"codimension/flowui/everything.py" = ["E402", "E401", "F811", "F821", "E722", "F841"]
# HTML strings in help - long lines acceptable
"codimension/ui/helpwidget.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["doc/", ".*"]
